# scraped2rss

./: .gitignore  Dockerfile  Pipfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-image.yml  docker-publish.yml
app/: main.py  models.py
app/routes/: log.py  overview.py  targets.py
app/scraping/: __init__.py  base_scraper.py  tuxedo_news_scraper.py  uebermedien.py
